--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,19 @@
 {
   "name": "movie-recommendation-service",
-  "version": "1.0.0",
-  "description": "Сервис рекомендаций фильмов по сценариям с использованием API Кинопоиска",
+  "version": "2.0.0",
+  "description": "Сервис рекомендаций фильмов по сценариям с реальной базой данных и API Кинопоиска",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
+    "dev:win": "set NODE_ENV=development&& nodemon src/app.js",
+    "start:prod": "set NODE_ENV=production&& node src/app.js",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "db:migrate": "psql -h localhost -U postgres -d movie_recommendations -f migrations/001_create_tables.sql",
-    "db:seed": "node seeds/seed.js",
-    "db:reset": "npm run docker:down && npm run docker:up && sleep 5 && npm run db:migrate && npm run db:seed",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "docker:logs": "docker-compose logs -f",
+    "db:test": "node -e \"require('./src/database').testConnection()\"",
+    "test": "echo \"Запустите: npm run db:test для проверки подключения\"",
+    "test:api": "node test/api-test.js"
   },
   "keywords": [
     "movies",
@@ -19,9 +21,11 @@
     "kinopoisk",
     "nodejs",
     "express",
-    "postgres"
+    "postgres",
+    "real-data",
+    "no-mocks"
   ],
-  "author": "Your Name",
+  "author": "Movie Recommendation Team",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
@@ -38,6 +42,7 @@
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
