--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movie-recommendation-service",
-  "version": "2.0.0",
-  "description": "Сервис рекомендаций фильмов по сценариям с реальной базой данных и API Кинопоиска",
+  "version": "3.0.0",
+  "description": "Сервис рекомендаций фильмов по сценариям с реальной базой данных, API Кинопоиска и аутентификацией",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
@@ -12,8 +12,10 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
     "db:test": "node -e \"require('./src/database').testConnection()\"",
-    "test": "echo \"Запустите: npm run db:test для проверки подключения\"",
-    "test:api": "node test/api-test.js"
+    "db:migrate": "node src/migrations/runMigrations.js",
+    "test": "jest --coverage",
+    "test:api": "node test/api-test.js",
+    "generate:secret": "node -e \"console.log(require('crypto').randomBytes(64).toString('hex'))\""
   },
   "keywords": [
     "movies",
@@ -22,27 +24,33 @@
     "nodejs",
     "express",
     "postgres",
-    "real-data",
-    "no-mocks"
+    "authentication",
+    "jwt",
+    "real-data"
   ],
   "author": "Movie Recommendation Team",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
