--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
-    "db:test": "node -e \"require('./src/database').testConnection()\"",
     "db:migrate": "node src/migrations/runMigrations.js",
+    "db:migrate:status": "node src/migrations/runMigrations.js status",
+    "db:migrate:rollback": "node src/migrations/runMigrations.js rollback",
+    "db:create": "node -e \"const { execSync } = require('child_process'); execSync(`createdb -h ${process.env.DB_HOST || 'localhost'} -p ${process.env.DB_PORT || 5432} -U ${process.env.DB_USER || 'postgres'} ${process.env.DB_NAME || 'movie_recommendations'}`)\"",
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate",
     "test": "jest --coverage",
     "test:api": "node test/api-test.js",
     "generate:secret": "node -e \"console.log(require('crypto').randomBytes(64).toString('hex'))\""
